# k3d-app

./: Dockerfile  README.md  app.py  pyproject.toml
kubernetes/: flask-web-service.yaml  flask-web.yaml  ingress.yaml  k3d-registries.yaml  nginx-ingress.yaml
scripts/: build.sh  run.sh
