[tool.poetry]
name = "k3d-app"
version = "0.1.0"
description = "This is a sample kubernetes app."
authors = ["Abhishek Kumar <abhishek_ku@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
